FIX last small issues before translation

--- a/docs/de-de/modules/_includes/pages/tags-search.adoc
+++ b/docs/de-de/modules/_includes/pages/tags-search.adoc
@@ -3,7 +3,7 @@ Nutze die Suchfunktion, um deine bereits erstellten Tags zu finden und sie weite
 
 . Öffne das Menü *Einrichtung » Einstellungen » Tags*.
 .. *_Möglichkeit 1_*: Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Tags zu sehen.
-.. *_Möglichkeit 2_*: Klicke auf icon:filter_alt[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+.. *_Möglichkeit 2_*: Klicke auf icon:filter_alt[set=material, role="darkGrey"], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 Siehe die Tabelle unten.
 . Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
 . Klicke auf ein Tag, um es zu öffnen und die Einstellungen weiter zu bearbeiten.
@@ -45,12 +45,8 @@ Nutze die Suchfunktion, um deine bereits erstellten Tags zu finden und sie weite
 .. *_Möglichkeit 1_*: Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Tags zu sehen.
 .. *_Möglichkeit 2_*: Gib eine Zahl oder einen Text in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
 Klicke dann auf icon:search[role="darkGrey"], um die Suche auszuführen.
-.. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+.. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material, role="darkGrey"], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 Siehe die Tabelle unten.
-. Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
-.. *_Möglichkeit 1_*: Klicke auf ein Tag, um es zu öffnen und die Einstellungen weiter zu bearbeiten.
-.. *_Möglichkeit 2_*: Wähle mehrere Tags aus (icon:check-square[role="blue"]) und klicke auf das Stiftsymbol (icon:pencil[role="darkGrey"]).
-Dies öffnet alle gewählten Tags gleichzeitig und du kannst die Einstellungen weiter bearbeiten.
 
 #image::artikel:standard-suche.gif[]#
 
@@ -104,11 +100,11 @@ Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und ein
 Aktuellen Filter speichern:
 
 . Führe eine Suche aus.
-. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material]).
-. Klicke auf icon:bookmark_border[set=material] *Aktuellen Filter speichern*.
+. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material, role="darkGrey"]).
+. Klicke auf icon:bookmark_border[set=material, role="darkGrey"] *Aktuellen Filter speichern*.
 . Gib einen Namen ein und schalte die optionalen Einstellungen bei Bedarf ein (icon:toggle_on[set=material, role="blue"]).
 . Klicke auf *Speichern*. +
-→ Die Filtereinstellungen erscheinen nun unter *Gespeicherte Filter* (icon:bookmarks[set=material]).
+→ Die Filtereinstellungen erscheinen nun unter *Gespeicherte Filter* (icon:bookmarks[set=material, role="darkGrey"]).
 
 #image::artikel:vorlage-speichern.gif[]#
 
@@ -120,22 +116,30 @@ Aktuellen Filter speichern:
 |
 icon:toggle_on[set=material, role="blue"] = Wenn du das Menü *Einrichtung » Einstellungen » Tags* öffnest, werden die Filtereinstellungen bereits vorausgewählt sein und die Suche wird automatisch mit diesen Einstellungen gestartet.
 
-icon:toggle_off[set=material] = Die Filtereinstellungen werden nicht bereits vorausgewählt sein.
+icon:toggle_off[set=material, role="darkGrey"] = Die Filtereinstellungen werden nicht bereits vorausgewählt sein.
 
 | *Filter für alle Benutzer erstellen*
 |
 icon:toggle_on[set=material, role="blue"] = Die Filtervoreinstellungen werden für alle Benutzerkonten sichtbar sein.
 
-icon:toggle_off[set=material] = Die Filtervoreinstellungen werden nur für dein eigenes Benutzerkonto sichtbar sein.
+icon:toggle_off[set=material, role="darkGrey"] = Die Filtervoreinstellungen werden nur für dein eigenes Benutzerkonto sichtbar sein.
 
 |====
 
 [.instruction]
 Gespeicherte Filter anwenden:
 
-. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material]).
+. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material, role="darkGrey"]).
 . Klicke auf eine bereits erstellte Filtervoreinstellung. +
 → Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als so genannte "Chips" dargestellt.
 
 --
+
+. Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
+.. *_Möglichkeit 1_*: Klicke auf ein Tag, um es zu öffnen und die Einstellungen weiter zu bearbeiten.
+.. *_Möglichkeit 2_*: Wähle mehrere Tags aus (icon:check-square[role="blue"]) und klicke auf das Stiftsymbol (icon:pencil[role="darkGrey"]).
+Dies öffnet alle gewählten Tags gleichzeitig und du kannst die Einstellungen weiter bearbeiten.
+
+#image::artikel:vorlage-speichern.gif[]#
+
 ////
