--- a/docs/de-de/modules/artikel/pages/markierungen.adoc
+++ b/docs/de-de/modules/artikel/pages/markierungen.adoc
@@ -19,7 +19,7 @@ In plentymarkets ist dies durch Tags und Markierungen möglich.
 *_Technische Angaben_*:
 
 * Tags sind Texte, wie Keywords oder Phrasen.
-* Tags werden mit einzelnen Varianten verknüpft.
+* Tags werden auf Varianten-Ebene verknüpft.
 * Deine Varianten können mit beliebig vielen Tags verknüpft werden.
 
 *_Anwendungsbeispiele_*:
@@ -34,7 +34,7 @@ In plentymarkets ist dies durch Tags und Markierungen möglich.
 *_Technische Angaben_*:
 
 * Markierungen sind grafische Symbole.
-* Markierungen werden mit ganzen Artikeldatensätzen verknüpft.
+* Markierungen werden auf Artikel-Ebene verknüpft.
 * Deine Artikel können mit maximal zwei Markierungen verknüpft werden.
 
 *_Anwendungsbeispiel_*:
@@ -79,7 +79,7 @@ Tags können:
 [TIP]
 .Vererbungsverhalten
 ====
-Tags, die du mit der Hauptvariate verknüpfst, werden an die Untervarianten des Artikels vererbt. Wenn du pro Variante eigene Tags speichern möchtest, deaktiviere die Vererbung und speichere eigene Tags an den Varianten.
+Tags, die du mit der Hauptvariante verknüpfst, werden an die Untervarianten des Artikels vererbt. Wenn du pro Variante eigene Tags speichern möchtest, deaktiviere die Vererbung und speichere eigene Tags an den Varianten.
 ====
 
 [#700]
@@ -128,7 +128,7 @@ xref:daten:elasticSync-artikel.adoc#2290[Weitere Informationen].
 .*Werden Tags vererbt? Werden sie also von der Hauptvariante an die Untervarianten weitergegeben?*
 --
 
-Tags, die du mit der Hauptvariate verknüpfst, werden an die Untervarianten des Artikels vererbt. Wenn du pro Variante eigene Tags speichern möchtest, deaktiviere die Vererbung und speichere eigene Tags an den Varianten.
+Tags, die du mit der Hauptvariante verknüpfst, werden an die Untervarianten des Artikels vererbt. Wenn du pro Variante eigene Tags speichern möchtest, deaktiviere die Vererbung und speichere eigene Tags an den Varianten.
 
 --
 
