--- a/docs/de-de/modules/artikel/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/artikel/pages/artikelsuche.adoc
@@ -27,7 +27,11 @@ video::682773880#t=0m28s[vimeo]
 [#100]
 == Nach Artikeln und Varianten suchen
 
-
+. Öffne das Menü *Artikel » Artikel-UI*.
+.. *_Möglichkeit 1_*: Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Artikel zu sehen.
+.. *_Möglichkeit 2_*: Gib eine Zahl in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
+Klicke dann auf icon:search[role="darkGrey"], um die Suche auszuführen.
+.. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 
 Siehe die Tabelle unten.
 . Wenn du die Suche ausführst, siehst du die xref:artikel:suchen.adoc#500[Ergebnisliste] rechts.
