data log update - EN

--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -26,7 +26,7 @@ Daten-Log bedeutet auf Deutsch "Datenprotokoll". Im Daten-Log werden also Ereign
 
 | *Level*
 | Der Schweregrad des Ereignisses +
-(<<#log-levels, Was beuten die Log-Levels?>>)
+(<<#log-levels, Was bedeuten die Log-Levels?>>)
 
 | *Integration*
 | Der Bereich des Systems, in dem das Ereignis stattgefunden hat.
@@ -201,7 +201,7 @@ Optionale Protokollierung aktivieren:
 . Aktiviere die Option *Aktiv*.
 . Wähle in der Dropdown-Liste *Dauer*, wie lange Ereignisse für diesen Bereich protokolliert werden sollen.
 . Wähle in der Dropdown-Liste *Log-Level*, welche Ereignisse du protokollieren möchtest. +
-<<#log-levels, Was beuten die Log-Level?>>
+<<#log-levels, Was bedeuten die Log-Levels?>>
 . Speichere (icon:save[]) die Einstellungen. +
 → Die Protokollierung wird gestartet. +
 → Die Protokollierung endet nach der eingestellten Dauer automatisch. +
