--- a/docs/en-gb/modules/crm/pages/messenger.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger.adoc
@@ -34,7 +34,7 @@ include::_includes:page$rights.adoc[]
 include::_includes:page$tags-creation.adoc[]
 
 [TIP]
-If you want to create messages that should be *billed* via the Messenger, you have to create tags for the availability _Message (billable)_ in the same way. You have to add these tags to the <<#create-message, message>>.
+If you want to create messages that should be _billed_ via the Messenger, you have to create tags for the availability *Message (billable)* in the same way. You have to add these tags to the <<#create-message, message>>.
 
 [#create-message]
 == Creating a message
