update icons on sending emails page

--- a/docs/en-gb/modules/crm/pages/sending-emails.adoc
+++ b/docs/en-gb/modules/crm/pages/sending-emails.adoc
@@ -270,10 +270,10 @@ Uploading the company logo to the webspace:
 
 . Go to *CMS » Webspace*.
 . Click on the folder that you want to upload the logo to. +
-icon:map-signs[] *_Or:_* Create a new folder (icon:folder_add[set=plenty, role=green]).
-. Click on *Upload file* (icon:upload[role="purple"]) or use drag-and-drop. +
+icon:map-signs[] *_Or:_* Create a new folder (icon:create_new_folder[set=material]).
+. Click on *Upload file* (icon:file_upload[set=material]) or use drag-and-drop. +
 → The logo is uploaded.
-. In the line of the image, click on *Copy to clipboard* (icon:copy_clipboard[set=plenty, role=purple] to copy the image URL.
+. In the line of the image, click on *Copy to clipboard* (icon:content_copy[set=material] to copy the image URL.
 
 [#1000]
 === Inserting template variables in the HTML design
@@ -1550,11 +1550,10 @@ This is not a global template variable, but a variable that is set per order ite
 
 |====
 
-[discrete]
-[#overview-cms-syntax-old]
+[#overview-cms-syntax-old-chapter]
 === Overview: CMS syntax (old)
 
-Open the following box to see a CMS syntax overview that you can still use in the "old" email templates.
+Open the following box to see a CMS syntax overview that you can still use in the "old" email templates in the *Setup » Client » [Select client] » Email » Templates* menu.
 
 [.collapseBox]
 .Overview: CMS syntax (old)
