ADD english translation for new tag ui

--- a/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
+++ b/docs/en-gb/modules/crm/pages/using-the-ticket-system.adoc
@@ -323,6 +323,11 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#search-tags]
+==== Searching for tags
+
+include::_includes:page$tags-search.adoc[]
+
 [#1600]
 == Creating a ticket
 
