--- a/docs/en-gb/modules/crm/pages/managing-contacts.adoc
+++ b/docs/en-gb/modules/crm/pages/managing-contacts.adoc
@@ -212,6 +212,10 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#search-tags]
+==== Searching for tags
+
+include::_includes:page$tags-search.adoc[]
 
 [#25]
 === Using the discount system
