--- a/docs/en-gb/modules/crm/pages/messenger.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger.adoc
@@ -36,6 +36,11 @@ include::_includes:page$tags-creation.adoc[]
 [TIP]
 If you want to create messages that should be _billed_ via the Messenger, you have to create tags for the availability *Message (billable)* in the same way. You have to add these tags to the <<#create-message, message>>.
 
+[#tags-messenger-search]
+=== Searching for tags for the messenger
+
+include::_includes:page$tags-search.adoc[]
+
 [#create-message]
 == Creating a message
 
