--- a/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
@@ -8,7 +8,7 @@ xref:crm:search-contact.adoc#[Searching for a contact icon:long-arrow-right[]]
 
 '''
 
-You have to carry out some preparatory settings to be able to optimally use the contact management in the *CRM » Contacts* menu. 
+You have to carry out some preparatory settings to be able to optimally use the contact management in the *CRM » Contacts* menu.
 
 By clicking on an entry in the following list, you will be directly forwarded to the corresponding sub-chapter:
 
@@ -109,10 +109,10 @@ The default view is activated for all users by default. You can also withdraw th
 All settings that are related to activating views are done in the user account in the *Setup » Settings » User » Rights » User* menu in the *Views* area.
 
 * Activating views for users to create a new contact data record: +
-Go to the user account and open in the *Views* area the *CRM > Contacts > New contact > Custom views* area. Select (icon:check-square[role="blue"]) the desired views from the list. 
+Go to the user account and open in the *Views* area the *CRM > Contacts > New contact > Custom views* area. Select (icon:check-square[role="blue"]) the desired views from the list.
 
 * Activating views for users to edit an existing contact data record: +
-Go to the user account and open in the *Views* area the *CRM > Contact details > Custom views* area. Select (icon:check-square[role="blue"]) the desired views from the list. 
+Go to the user account and open in the *Views* area the *CRM > Contact details > Custom views* area. Select (icon:check-square[role="blue"]) the desired views from the list.
 
 [#create-customer-class]
 == Creating a customer class
@@ -222,6 +222,11 @@ include::_includes:page$tags-rights.adoc[]
 === Creating tags
 
 include::_includes:page$tags-creation.adoc[]
+
+[#search-tag]
+=== Searching for tags
+
+include::_includes:page$tags-search.adoc[]
 
 [#properties-introduction]
 == Creating properties
