--- a/docs/en-gb/modules/stock-management/pages/working-with-redistributions.adoc
+++ b/docs/en-gb/modules/stock-management/pages/working-with-redistributions.adoc
@@ -102,6 +102,11 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#450]
+==== Searching for tags
+
+include::_includes:page$tags-search.adoc[]
+
 [#500]
 === Setting up a template for the PO delivery note
 Working with redistributions requires using the document type *PO delivery note* (PO = Purchase order). This delivery note lists all variations included in a redistribution.  Warehouse staff and logistics partners can use this document to keep track of the variations included when booking the order items in into the receiving warehouse.
