--- a/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
+++ b/docs/en-gb/modules/stock-management/pages/working-with-reorders.adoc
@@ -137,6 +137,11 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#139]
+==== Searching for tags
+
+include::_includes:page$tags-search.adoc[]
+
 [#140]
 === Setting up the reorder document
 The *reorder document* is a specific document that serves as an order form for the reorder. This document contains information on all variations included in the reorder. You as the seller send it to your supplier. +
